# learn_pcl

./: .gitignore  README.md
1.检查点是否有效/: CMakeLists.txt  CheckIfPointIsValid.cpp
10.python调用pcl/: CMakeLists.txt  main.cpp
10.python调用pcl显示/: main.cpp  show_pcd.py
10.python调用pcl显示/pybind11/: README.md
11.pcd读取/: main.cpp
12.pcd写入/: CMakeLists.txt  main.cpp
12_remove_outliers/: remove_outliers.cpp
13.点云连接/: main.cpp
14.模板匹配/: main.cpp
14.模板匹配/template_alignment/: object_templates.txt
15.计算点云边界/: CMakeLists.txt  main.cpp
1_reading_pcd/: pcd_read.cpp
2.点云复制/: CMakeLists.txt  CopyPointCloud.cpp
3.获取最大最小坐标/: CMakeLists.txt  GetMaxMinCoordinates.cpp
4.有序点云/: main.cpp
5.测作用域内的时间/: main.cpp
6.删除无效点云/: main.cpp
6_ octree_change_detection/: octree_change_detection.cpp
7.根据索引提取点云/: main.cpp
8.ply转pcd/: main.cpp
